# delta

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  architecture.md  concept.md  install.ps1  install.sh  mvp.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  concept.md  feedback.md  mvp.md  progress.md  releasing.md  tech-stack.md
docs/features/: app.md  comment-input.md  diff-view.md  export.md  file-navigation.md  git-integration.md  git.md  ui.md
src/: app.rs  diff.rs  export.rs  filetree.rs  git.rs  highlight.rs  intraline.rs  lib.rs  main.rs  segment.rs  ui.rs
src/app/: layout.rs  mod.rs  navigation.rs  notes.rs
src/filetree/: mod.rs  node.rs
src/ui/: cursor.rs  diff_render.rs  mod.rs  popup.rs  render.rs  split_render.rs
tests/: integration.rs
tests/common/: mod.rs
