[package]
name = "delta"
version = "0.6.0"
edition = "2024"

[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
log = "0.4"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3"
simplelog = "0.12"
syntect = "5"
two-face = "0.5"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
